# folders-eslint

./: LICENSE_MIT  README.md  package-lock.json  package.json
lib/: index.js
lib/__tests__/glob_invalid_files/: invalid_files.spec.js
lib/__tests__/glob_invalid_files/violate_a_of_bc/: .folderslintrc.json
lib/__tests__/glob_invalid_files/violate_asterisk_a/: .folderslintrc.json
lib/__tests__/glob_invalid_files/violate_c_of_ab/: .folderslintrc.json
lib/__tests__/glob_invalid_files/violate_child_of_parent/: .folderslintrc.json
lib/__tests__/glob_invalid_files/violate_parent_of_child/: .folderslintrc.json
lib/__tests__/glob_valid_files/: valid_files.spec.js
lib/__tests__/glob_valid_files/one_above_root/: .folderslintrc.json
lib/__tests__/glob_valid_files/satisfy_ab/: .folderslintrc.json
lib/__tests__/glob_valid_files/satisfy_ba/: .folderslintrc.json
lib/__tests__/glob_valid_files/satisfy_child_of_parent/: .folderslintrc.json
lib/__tests__/glob_valid_files/satisfy_parent_of_child/: .folderslintrc.json
lib/__tests__/invalid_config/: invalid_config.spec.js
lib/__tests__/invalid_config/empty_config_rules/: .folderslintrc.json
lib/__tests__/invalid_config/invalid_config_root/: .folderslintrc.json
lib/__tests__/invalid_config/missing_config_rules/: .folderslintrc.json
lib/__tests__/invalid_files/: invalid_files.spec.js
lib/__tests__/regex_invalid_files/: invalid_files.spec.js
lib/__tests__/regex_valid_files/: valid_files.spec.js
lib/__tests__/valid_files/: valid_files.spec.js
native/: Cargo.toml
native/src/: lib.rs
(+12 files in other folders)
