[package]
name = "folders-eslint"
version = "0.1.0"
authors = ["ferrin"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "folders_eslint"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.5.3"

[dependencies]
neon = "0.5.3"
walkdir = "2"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.60"
glob = "0.3.0"